2005-02-27  Zoltan Varga  <vargaz@freemail.hu>

	* mini-amd64.h mini.h mini-amd64.c tramp-amd64.c (mono_amd64_get_vcall_slot_addr):
	Rename this to mono_arch....
	(mono_amd64_get_delegate_method_ptr_addr): Ditto.

	* mini-amd64.c (mono_amd64_get_delegate_method_ptr_addr): New helper function.

	* mini-amd64.c (emit_call): If both the caller and the callee is
	guaranteed to have 32 bit addresses, emit a normal call.

	* tramp-amd64.c: Adapt to changes in mini-amd64.c.

	* tramp-amd64.c (amd64_magic_trampoline): Remove patching of trampolines. 
	* tramp-amd64.c (amd64_magic_trampoline): Add support for patching the
	method_ptr inside delegates.

2005-02-26  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (mono_jit_free_method): Free the method info even if the native code is
	invalidated. Fixes #73001.

	* mini.c: Add a proper icall wrapper for mono_delegate_ctor.

	* mini-x86.c: Only use stdcall for pinvokes on windows.

Thu Feb 24 15:22:30 CET 2005 Paolo Molaro <lupus@ximian.com>

	* mini.c, mini.h: make mono_lmf_addr a fast-access thread var.
	* mini-x86.c: remove unreliable __thread var offset detection,
	use the correct accessors and enable by default.

2005-02-23  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (mono_jit_free_method): Fix memory leak.

2005-02-22  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (mono_method_to_ir): Allocate a GOT var for THROW and RETHROW. 

2005-02-21  Zoltan Varga  <vargaz@freemail.hu>

	* cpu-amd64.md: Fix lengths of atomic opcodes.

Mon Feb 21 16:52:20 CET 2005 Paolo Molaro <lupus@ximian.com>

	* driver.c: try to not imply using ICU is any good.

2005-02-20  Zoltan Varga  <vargaz@freemail.hu>

	* mini-amd64.c (mono_arch_get_inst_for_method): Implement more 
	functions as inline ops.

	* mini-ops.h inssel-amd64.brg cpu-amd64.md mini-amd64.c: Implement
	some Interlocked functions as inline ops.

	* mini.c (move_basic_block_to_end): Fix bug in last patch.

	* mini.h (MonoBasicBlock): Reorganize fields a bit.
